Note: Should add info for earlier releases.

	May 8, 2015
	- PGI 15.4 enabled some workarounds to be removed.

3.1	March 20, 2015
	- PGI 15.1 now supported.
	- Asserts over integer arrays now supported. INT32 and INT64 support added.
	- Consolidated assertAssociated directives to:
	    @assertAssociated
	    @assertNotAssociated
	- Added ifndef option to preprocessor directives.
	- Fixes: Name length checking, unbalanced allocate, python 3 basestring.

3.0.2	December 12, 2014
	- Corrected lack of PRESENT check on some optional arguments.
	- Brought integer array version of assertEqual up to level of other numbers.
	- Directives added:
	    @assertEquivalent(...)
	    @assertEqual(a,b)
	    @assertAssociated(...), @assertUnAssociated(...)
	    @assertAssociatedWith(...), @assertUnAssociatedWith(...)
	- Added code to parse brackets in directive arguments,
	    allowing @assertEquivalent([...],[...]).
	    Needed for directives that must parse arguments to construct other calls.
	- Extended assertTrue and assertFalse to cover arrays of logical.
	- Removed dependency on CPP stringification in the REFLECT macro simplifying build.
	- Improved portability of build, fixing problem with OUTPUT_FLAG, i.e. "-o".
	- Fixed build problem on NAG, cmake/gmake, and OS X.
	- Replaced explicit invocations of python with $(PYTHON), set in GNUmakefile,
	    to aid specification.
	- Removed an extraneous allocate (Patch 5).

3.0.1	September 15, 2014
	- Fixed parser bug that was not recognizing user-provided procedures
 	  annotated with @before/@after for MPI tests.
	- Corrected end-of-run logic in include/driver.F90.
	- Minor corrections & simplifications to build process.
	- Improved compilation time by refactoring automatically generated code.
	- Added compile-time configuration parameter to control maximum rank
	  supported by assertions over arrays, e.g. AssertReal.
	- Added "whitespace=IGNORE_DIFFERENCES" and similar options to AssertEqual.


3.0.0	April 04, 2014