@@ -96,6 +96,8 @@ if (ROBUST)
     add_definitions(-DBUILD_ROBUST)
 endif()
 
+message("compiler string (${CMAKE_Fortran_COMPILER_ID}")
+
 if (${CMAKE_Fortran_COMPILER_ID} STREQUAL "Intel")
 
     # Use ifort
@@ -133,6 +135,14 @@ elseif(${CMAKE_Fortran_COMPILER_ID} STREQUAL PGI)
     # Use PGI.
     add_definitions(-DPGI)
     set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS_DEBUG} -O0 -g -traceback -Mallocatable=03 -Mbounds -Mchkfpstk -Mchkstk")
+
+elseif(${CMAKE_Fortran_COMPILER_ID} STREQUAL "Cray")
+
+    # Use ftn (Cray wrapper)
+    add_definitions(-DCray)
+    add_definitions(-DSTRINGIFY_SIMPLE)
+    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS_DEBUG} -O0 -g ${CMAKE_Fortran_FLAGS}")
+
 
 else()
 
